feat: GC 로그 분석 (v2.5.2) — 파서·덤프 매칭·LLM + JDK 6/7 CMS 호환 + 전송 이름 충돌 방어
GC 로그를 세 번째 분석 대상으로 추가한다.
- 파서: JDK 9+ 통합 로깅 / JDK 8 이하 PrintGCDetails (Parallel·CMS·Serial·G1),
  단일 패스 집계기(백분위·시계열 다운샘플·누수 추세·소견), 결과는 gc_log_result_detail
- 수집: Servers 스캔·전송(gclog 디렉토리), 대시보드·Files 업로드, Files 분류 = 저장소 이동
- 매칭: 서버·시간·-Xlog 경로 점수로 힙 덤프 자동 연결, 수동 연결·해제
- AI: GC 전용 프롬프트, 힙 AI 프롬프트에 매칭 로그 요약 주입
- 대시보드 Recent Files 에 GC 로그 병합, KPI 인스턴스 카드

JDK 6/7 형식(JEUS 8 운영 CMS 로그) 호환
- 원인 괄호 없는 CMS initial-mark/remark 를 본문 마커로 판정 (종전: 전부 Young)
- [GC 안에 Old 세대 수집([CMS:]/[Tenured:])이 있으면 Full 로 승격
  (JDK 8 promotion failed·concurrent mode failure 도 Young → Full)
- 이벤트에 끼어든 CMS 동시 단계 분리, Tenuring 분포 줄 제거, (System)·[GC--·PSOldGen
- 신규 소견 CMS_OLD_SATURATED, PermGen 메타(화면·프롬프트 라벨)

원격 전송 이름 충돌 방어
- 기록만 남은 GC 이름·힙 .gz 짝을 점유로 판정, 동시 전송 이름 예약 + 덮어쓰기 없는 이동
- 스캔 '전송됨' 판정을 원격 전체 경로 기준으로

테스트 775건 통과(라이브 4 skip). 상세는 CHANGELOG.md 2026-09-14 항목, CLAUDE.md 함정 49~55.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015cquJ2nVJKHyZM4XYtenVN